Update http.java